Add Spanish and avoid mix-content (https).

--- a/index.html
+++ b/index.html
@@ -493,6 +493,7 @@
                 <li>French (native language)</li>
                 <li>English (full professional proficiency)</li>
                 <li>Mandarin (elementary proficiency)</li>
+                <li>Spanish (elementary proficiency)</li>
             </ul>
         </section>
 
@@ -664,7 +665,7 @@
             </p>
         </section>
 
-        <script src="http://code.jquery.com/jquery-2.2.2.min.js"
+        <script src="https://code.jquery.com/jquery-2.2.2.min.js"
             integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="
             crossorigin="anonymous"></script>
         <script src="Minimap.js"></script>
