--- a/index.html
+++ b/index.html
@@ -229,6 +229,10 @@
                 background-image: url(img/screenshots/wyartlab.org.jpg);
             }
 
+            .illustration--elson {
+                background-image: url(img/screenshots/elson.fr.jpg);
+            }
+
             .project__thumbnail {
                 display: block;
                 max-width: 100%;
@@ -652,6 +656,28 @@
                 <div class="project__description">
                     <p>
                         2017: <a href="https://wyartlab.org/">wyartlab.org</a> is a collaboration with <a href="http://cargocollective.com/flagship">Flasghsip</a> in Shanghai for the graphic design. The research lab shows its members and (cool) researches.
+                    </p>
+                </div>
+            </div>
+
+            <div class="container projects__project">
+                <h3 class="project__title" id="elson.fr">elson.fr</h3>
+
+                <a class="project__illustration illustration--elson" href="https://elson.fr/">
+                    <img class="project__thumbnail" src="img/thumbnails/elson.fr.jpg" width="960" height="240" alt="">
+                </a>
+
+                <div class="project__description">
+                    <p>
+                        2018: <a href="https://elson.fr/">elson.fr</a> goal is to assist podcast users to find what they will like, while supporting the producers of podcasts.
+                    </p>
+
+                    <p>
+                        I made <a href="https://archives.arkhi.org/projects/elson.fr/prototypes/landing/">those prototypes</a> updated on a daily basis while mockups were provided. This implies some refactoring, and a lot of flexibility. The prototypes were later integrated into a React‑based application.
+                    </p>
+
+                    <p>
+                        Being playful at times, I <a href="https://archives.arkhi.org/projects/elson.fr/prototypes/symbole-elson-animated.html">animated the logo</a> a bit, to maybe use it as a loader.
                     </p>
                 </div>
             </div>
