Update content with archived websites.

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 
                 <div class="project__description">
                     <p>
-                        2009: <a href="http://bodybag.me/">http://bodybag.me/</a> is a website for two Dutch architects in Shanghai who started their fashion design company.
+                        2009: <a href="http://archives.arkhi.org/projects/bodybag.me/">Bodybag</a> was a website for two Dutch architects in Shanghai who started their fashion design company.
                     </p>
                 </div>
             </div>
@@ -555,7 +555,7 @@
 
                 <div class="project__description">
                     <p>
-                        2010: <a href="http://archives.arkhi.org/projects/flipmood/">http://flipmood.com/</a> <em>was</em> a website for friends that wanted to promote their creative works. Working with these two was amazingly insightful about what can be expected from good graphic designers.
+                        2010: <a href="http://archives.arkhi.org/projects/flipmood.com/">Flipmood</a> was a website for friends that wanted to promote their creative works. Working with these two was amazingly insightful about what can be expected from good graphic designers.
                     </p>
                 </div>
             </div>
@@ -583,7 +583,7 @@
 
                 <div class="project__description">
                     <p>
-                        2011: <a href="http://archives.arkhi.org/projects/sky-view/sample.html">http://www.skyview.asia/</a> <em>was</em> a command from a friend. The concept was <i>simplicity</i> and <i>fullscreen</i>.
+                        2011: <a href="http://archives.arkhi.org/projects/sky-view/sample.html">Skyview/</a> was a command from a friend. The concept was <i>simplicity</i> and <i>fullscreen</i>.
                     </p>
                 </div>
             </div>
