Use a better default link for elson prototypes.

--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                     </p>
 
                     <p>
-                        I made <a href="https://archives.arkhi.org/projects/elson.fr/prototypes/landing/">those prototypes</a> updated on a daily basis while mockups were provided. This implies some refactoring, and a lot of flexibility. The prototypes were later integrated into a React‑based application.
+                        I made <a href="https://archives.arkhi.org/projects/elson.fr/prototypes/home-loggedin/">those prototypes</a> updated on a daily basis while mockups were provided. This implies some refactoring, and a lot of flexibility. The prototypes were later integrated into a React‑based application.
                     </p>
 
                     <p>
