Add KnowsAbout and KnowsLanguage.

--- a/index.html
+++ b/index.html
@@ -397,93 +397,177 @@
 
             <dl class="list--inline">
                 <dt class="list__header">Frontend</dt>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <abbr title="Hypertext Markup Language" itemprop="name"><a href="https://www.w3.org/html/">HTML</a></abbr>,
                     <meta itemprop="ratingValue" content="5">
                 </dd>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <abbr title="Cascading Style Sheets" itemprop="name"><a href="https://www.w3.org/css/">CSS</a></abbr>,
                     <meta itemprop="ratingValue" content="5">
                 </dd>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <span itemprop="name"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</a></span>,
                     <meta itemprop="ratingValue" content="3">
                 </dd>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <span itemprop="name"><a href="https://en.wikipedia.org/wiki/Responsive_web_design">Responsive Web Design</a></span>,
                     <meta itemprop="ratingValue" content="4">
                 </dd>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <span itemprop="name"><a href="http://lesscss.org/">Less</a></span>,
                     <meta itemprop="ratingValue" content="3">
                 </dd>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <abbr title="Syntactically Awesome Stylesheets" itemprop="name"><a href="http://sass-lang.com/">Sass</a></abbr>,
                     <meta itemprop="ratingValue" content="4">
                 </dd>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <span itemprop="name"><a href="http://jquery.com/">jQuery</a></span>,
                     <meta itemprop="ratingValue" content="4">
                 </dd>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <span itemprop="name"><a href="http://getbootstrap.com/">Bootstrap</a></span>,
                     <meta itemprop="ratingValue" content="4">
                 </dd>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <span itemprop="name"><a href="https://laravel.com/docs/master/blade">Laravel Blade templates</a></span>,
                     <meta itemprop="ratingValue" content="4">
                 </dd>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <span itemprop="name"><a href="http://twig.sensiolabs.org/">Symfony Twig templates</a></span>
                     <meta itemprop="ratingValue" content="4">
                 </dd>
 
                 <dt class="list__header">Automation tools</dt>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <abbr title="Node.js Package Manager" itemprop="name"><a href="http://npmjs.com/">Npm</a></abbr>,
                     <meta itemprop="ratingValue" content="3">
                 </dd>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <span itemprop="name"><a href="http://gruntjs.com/">Grunt</a></span>,
                     <meta itemprop="ratingValue" content="4">
                 </dd>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <span itemprop="name"><a href="http://gulpjs.com/">Gulp</a></span>,
                     <meta itemprop="ratingValue" content="3">
                 </dd>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <span itemprop="name"><a href="http://vagrantup.com/">Vagrant</a></span>
                     <meta itemprop="ratingValue" content="2">
                 </dd>
 
                 <dt class="list__header">Methodology</dt>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <span itemprop="name"><a href="https://www.scrum.org/">Scrum</a></span>,
                     <meta itemprop="ratingValue" content="4">
                 </dd>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <span itemprop="name"><a href="http://www.toyota-global.com/company/vision_philosophy/toyota_production_system/just-in-time.html">Kanban</a></span>,
                     <meta itemprop="ratingValue" content="3">
                 </dd>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <span itemprop="name"><a href="https://37signals.com/remote">Remote work</a></span>
                     <meta itemprop="ratingValue" content="5">
                 </dd>
 
                 <dt class="list__header">Collaboration</dt>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <span itemprop="name"><a href="https://git-scm.com/">git</a></span>,
                     <meta itemprop="ratingValue" content="3">
                 </dd>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <abbr title="Knyle Style Sheets" itemprop="name"><a href="http://warpspire.com/kss/">KSS</a></abbr>,
                     <meta itemprop="ratingValue" content="4">
                 </dd>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <span itemprop="name"><a href="http://usejsdoc.org/">JSDoc</a></span>,
                     <meta itemprop="ratingValue" content="4">
                 </dd>
-                <dd class="list__item" itemscope itemtype="http://schema.org/Rating">
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
                     <span itemprop="name"><a href="http://phpdoc.org/">phpDocumentor</a></span>
                     <meta itemprop="ratingValue" content="4">
                 </dd>
@@ -494,10 +578,30 @@
             <h2>Languages</h2>
 
             <ul>
-                <li>French (native language)</li>
-                <li>English (full professional proficiency)</li>
-                <li>Mandarin (elementary proficiency)</li>
-                <li>Spanish (elementary proficiency)</li>
+                <li
+                    itemprop="knowsLanguage"
+                    itemscope itemtype="http://schema.org/Language"
+                >
+                    <span itemprop="name">French</span> (native language)
+                </li>
+                <li
+                    itemprop="knowsLanguage"
+                    itemscope itemtype="http://schema.org/Language"
+                >
+                    <span itemprop="name">English</span> (full professional proficiency)
+                </li>
+                <li
+                    itemprop="knowsLanguage"
+                    itemscope itemtype="http://schema.org/Language"
+                >
+                    <span itemprop="name">Mandarin</span> (elementary proficiency)
+                </li>
+                <li
+                    itemprop="knowsLanguage"
+                    itemscope itemtype="http://schema.org/Language"
+                >
+                    <span itemprop="name">Spanish</span> (elementary proficiency)
+                </li>
             </ul>
         </section>
 
