Add some linters.

--- a/index.html
+++ b/index.html
@@ -511,6 +511,38 @@
                     <span itemprop="name"><a href="http://vagrantup.com/">Vagrant</a></span>
                     <meta itemprop="ratingValue" content="2">
                 </dd>
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
+                    <span itemprop="name"><a href="https://eslint.org/">eslint</a></span>
+                    <meta itemprop="ratingValue" content="4">
+                </dd>
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
+                    <span itemprop="name"><a href="https://stylelint.io/">stylelint</a></span>
+                    <meta itemprop="ratingValue" content="4">
+                </dd>
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
+                    <span itemprop="name"><a href="https://www.typescriptlang.org/">typescript</a></span>
+                    <meta itemprop="ratingValue" content="3">
+                </dd>
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
+                    <span itemprop="name"><a href="https://codeception.com/">Codeception</a></span>
+                    <meta itemprop="ratingValue" content="2">
+                </dd>
 
                 <dt class="list__header">Methodology</dt>
                 <dd
