Update URLs, names and ratings.

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                 display: inline;
                 margin-left: 0;
                 font-style: normal;
+                text-transform: capitalize;
             }
 
             .list--inline .list__header {
@@ -484,7 +485,7 @@
                     itemprop="knowsAbout"
                     itemscope itemtype="http://schema.org/Rating"
                 >
-                    <abbr title="Node.js Package Manager" itemprop="name"><a href="http://npmjs.com/">Npm</a></abbr>,
+                    <abbr title="Node.js Package Manager" itemprop="name"><a href="https://npmjs.com/">npm</a></abbr>,
                     <meta itemprop="ratingValue" content="3">
                 </dd>
                 <dd
@@ -492,15 +493,7 @@
                     itemprop="knowsAbout"
                     itemscope itemtype="http://schema.org/Rating"
                 >
-                    <span itemprop="name"><a href="http://gruntjs.com/">Grunt</a></span>,
-                    <meta itemprop="ratingValue" content="4">
-                </dd>
-                <dd
-                    class="list__item"
-                    itemprop="knowsAbout"
-                    itemscope itemtype="http://schema.org/Rating"
-                >
-                    <span itemprop="name"><a href="http://gulpjs.com/">Gulp</a></span>,
+                    <span itemprop="name"><a href="https://gruntjs.com/">Grunt</a></span>,
                     <meta itemprop="ratingValue" content="3">
                 </dd>
                 <dd
@@ -508,7 +501,7 @@
                     itemprop="knowsAbout"
                     itemscope itemtype="http://schema.org/Rating"
                 >
-                    <span itemprop="name"><a href="http://vagrantup.com/">Vagrant</a></span>
+                    <span itemprop="name"><a href="https://gulpjs.com/">gulp</a></span>,
                     <meta itemprop="ratingValue" content="2">
                 </dd>
                 <dd
@@ -516,7 +509,15 @@
                     itemprop="knowsAbout"
                     itemscope itemtype="http://schema.org/Rating"
                 >
-                    <span itemprop="name"><a href="https://eslint.org/">eslint</a></span>
+                    <span itemprop="name"><a href="https://vagrantup.com/">Vagrant</a></span>,
+                    <meta itemprop="ratingValue" content="2">
+                </dd>
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
+                    <span itemprop="name"><a href="https://eslint.org/">ESLint</a></span>,
                     <meta itemprop="ratingValue" content="4">
                 </dd>
                 <dd
@@ -524,7 +525,7 @@
                     itemprop="knowsAbout"
                     itemscope itemtype="http://schema.org/Rating"
                 >
-                    <span itemprop="name"><a href="https://stylelint.io/">stylelint</a></span>
+                    <span itemprop="name"><a href="https://stylelint.io/">stylelint</a></span>,
                     <meta itemprop="ratingValue" content="4">
                 </dd>
                 <dd
@@ -532,7 +533,7 @@
                     itemprop="knowsAbout"
                     itemscope itemtype="http://schema.org/Rating"
                 >
-                    <span itemprop="name"><a href="https://www.typescriptlang.org/">typescript</a></span>
+                    <span itemprop="name"><a href="https://www.typescriptlang.org/">TypeScript</a></span>,
                     <meta itemprop="ratingValue" content="3">
                 </dd>
                 <dd
@@ -558,7 +559,7 @@
                     itemprop="knowsAbout"
                     itemscope itemtype="http://schema.org/Rating"
                 >
-                    <span itemprop="name"><a href="http://www.toyota-global.com/company/vision_philosophy/toyota_production_system/just-in-time.html">Kanban</a></span>,
+                    <span itemprop="name"><a href="https://global.toyota/en/company/vision-and-philosophy/production-system/">Kanban</a></span>,
                     <meta itemprop="ratingValue" content="3">
                 </dd>
                 <dd
@@ -566,7 +567,7 @@
                     itemprop="knowsAbout"
                     itemscope itemtype="http://schema.org/Rating"
                 >
-                    <span itemprop="name"><a href="https://37signals.com/remote">Remote work</a></span>
+                    <span itemprop="name"><a href="https://37signals.com/remote">remote work</a></span>
                     <meta itemprop="ratingValue" content="5">
                 </dd>
 
@@ -576,7 +577,7 @@
                     itemprop="knowsAbout"
                     itemscope itemtype="http://schema.org/Rating"
                 >
-                    <span itemprop="name"><a href="https://git-scm.com/">git</a></span>,
+                    <span itemprop="name"><a href="https://git-scm.com/">Git</a></span>,
                     <meta itemprop="ratingValue" content="3">
                 </dd>
                 <dd
@@ -584,7 +585,7 @@
                     itemprop="knowsAbout"
                     itemscope itemtype="http://schema.org/Rating"
                 >
-                    <abbr title="Knyle Style Sheets" itemprop="name"><a href="http://warpspire.com/kss/">KSS</a></abbr>,
+                    <abbr title="Knyle Style Sheets" itemprop="name"><a href="http://warpspire.com/kss/"><abbr title="Knyle Style Sheets">KSS</abbr></a></abbr>,
                     <meta itemprop="ratingValue" content="4">
                 </dd>
                 <dd
@@ -592,7 +593,7 @@
                     itemprop="knowsAbout"
                     itemscope itemtype="http://schema.org/Rating"
                 >
-                    <span itemprop="name"><a href="http://usejsdoc.org/">JSDoc</a></span>,
+                    <span itemprop="name"><a href="https://jsdoc.app/">JSDoc</a></span>,
                     <meta itemprop="ratingValue" content="4">
                 </dd>
                 <dd
@@ -600,7 +601,7 @@
                     itemprop="knowsAbout"
                     itemscope itemtype="http://schema.org/Rating"
                 >
-                    <span itemprop="name"><a href="http://phpdoc.org/">phpDocumentor</a></span>
+                    <span itemprop="name"><a href="https://phpdoc.org">phpDocumentor</a></span>
                     <meta itemprop="ratingValue" content="4">
                 </dd>
             </dl>
