Link to arkhi.org instead of Github + small fixes.

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
             </div>
 
             <p>
-                You can find extensive information about <a rel="me" itemprop="url" href="https://linkedin.com/in/fabienbasmaison">my professional background on LinkedIn</a>, some <a rel="me" itemprop="url" href="https://github.com/arkhi/">code on github</a>, and more <a href="http://arkhi.org/feed/juji">serendipitous gathering of things</a>.
+                You can find extensive information about <a rel="me" itemprop="url" href="https://linkedin.com/in/fabienbasmaison">my professional background</a> on LinkedIn or other <a rel="me" itemprop="url" href="https://arkhi.org/#networks-professional">services I use</a> along with a more <a href="http://arkhi.org/feed/juji">serendipitous gathering of things</a>.
             </p>
         </section>
 
@@ -379,7 +379,7 @@
                 <li>Iterate well planned small changes on big projects.</li>
                 <li>Work on several little projects for different clients.</li>
                 <li>Use semantic code and microdata.</li>
-                <li>Improve workflows.</li>
+                <li>Improve workflows with people and tools (linters or automated tests).</li>
             </ul>
         </section>
 
@@ -650,11 +650,11 @@
 
                 <div class="project__description">
                     <p>
-                        2018: <a href="https://elson.fr/">elson.fr</a> goal is to assist podcast users to find what they will like, while supporting the producers of podcasts.
+                        2018: <a href="https://elson.fr/">elson</a>’s goal is to assist podcast users to find what they will like while supporting the producers of podcasts.
                     </p>
 
                     <p>
-                        I made <a href="https://archives.arkhi.org/projects/elson.fr/prototypes/home-loggedin/">those prototypes</a> updated on a daily basis while mockups were provided. This implies some refactoring, and a lot of flexibility. The prototypes were later integrated into a React‑based application.
+                        I made <a href="https://archives.arkhi.org/projects/elson.fr/prototypes/home-loggedin/">those prototypes</a>, updated on a daily basis while mockups were provided. This implies permanent refactoring, and a lot of flexibility. The prototypes were later integrated into a React‑based application.
                     </p>
 
                     <p>
