--- a/index.html
+++ b/index.html
@@ -644,13 +644,13 @@
             <div class="container projects__project">
                 <h3 class="project__title" id="elson.fr">elson.fr</h3>
 
-                <a class="project__illustration illustration--elson" href="https://elson.fr/">
+                <a class="project__illustration illustration--elson" href="https://www.elson.fr/">
                     <img class="project__thumbnail" src="img/thumbnails/elson.fr.jpg" width="960" height="240" alt="">
                 </a>
 
                 <div class="project__description">
                     <p>
-                        2018: <a href="https://elson.fr/">elson</a>’s goal is to assist podcast users to find what they will like while supporting the producers of podcasts.
+                        2018: <a href="https://www.elson.fr/">elson</a>’s goal is to assist podcast users to find what they will like while supporting the producers of podcasts.
                     </p>
 
                     <p>
@@ -744,7 +744,7 @@
 
                 <div class="project__description">
                     <p>
-                        2011: <a href="http://archives.arkhi.org/projects/sky-view/sample.html">Skyview/</a> was a command from a friend. The concept was <i>simplicity</i> and <i>fullscreen</i>.
+                        2011: <a href="http://archives.arkhi.org/projects/sky-view/sample.html">Skyview</a> was a command from a friend. The concept was <i>simplicity</i> and <i>fullscreen</i>.
                     </p>
                 </div>
             </div>
@@ -766,7 +766,7 @@
             <div class="container projects__project">
                 <h3 class="project__title" id="flipmood.com">flipmood.com</h3>
 
-                <a class="project__illustration illustration--flipmood" href="http://archives.arkhi.org/projects/flipmood/">
+                <a class="project__illustration illustration--flipmood" href="http://archives.arkhi.org/projects/flipmood.com/">
                     <img class="project__thumbnail" src="img/thumbnails/flipmood.com.jpg" width="960" height="240" alt="">
                 </a>
 
@@ -780,13 +780,13 @@
             <div class="container projects__project">
                 <h3 class="project__title" id="bodybag.me">bodybag.me</h3>
 
-                <a class="project__illustration illustration--bodybag" href="http://bodybag.me/">
+                <a class="project__illustration illustration--bodybag" href="https://archives.arkhi.org/projects/bodybag.me/">
                     <img class="project__thumbnail" src="img/thumbnails/bodybag.me.jpg" width="960" height="240" alt="">
                 </a>
 
                 <div class="project__description">
                     <p>
-                        2009: <a href="http://archives.arkhi.org/projects/bodybag.me/">Bodybag</a> was a website for two Dutch architects in Shanghai who started their fashion design company.
+                        2009: <a href="https://archives.arkhi.org/projects/bodybag.me/">Bodybag</a> was a website for two Dutch architects in Shanghai who started their fashion design company.
                     </p>
                 </div>
             </div>
