Mention involvement in code quality at Juwai.

--- a/index.html
+++ b/index.html
@@ -544,6 +544,22 @@
                     <span itemprop="name"><a href="https://codeception.com/">Codeception</a></span>
                     <meta itemprop="ratingValue" content="2">
                 </dd>
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
+                    <span itemprop="name"><a href="https://travis-ci.com/">Travis‑CI</a></span>
+                    <meta itemprop="ratingValue" content="3">
+                </dd>
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
+                    <span itemprop="name"><a href="https://bitbucket.org/product/features/pipelines">Bitbucket Pipelines</a></span>
+                    <meta itemprop="ratingValue" content="2">
+                </dd>
 
                 <dt class="list__header">Methodology</dt>
                 <dd
@@ -690,6 +706,9 @@
                     </p>
                     <p>
                         I worked on almost every frontend related project, from the <em>administrative side of applications</em>, to a <em>global redesign of <a href="http://www.juwai.com">www.juwai.com</a></em> that started in December 2015.
+                    </p>
+                    <p>
+                        One focus of mine has been improving code quality, reduce bugs and time spent to fix them, either through documentation, collaboration with people on all sides of the spectrum or pushing for following code conventions through the use of Travis‑CI, automated tests and linters.
                     </p>
                 </div>
             </div>
